--- a/src/Minikanban/Components/_Imports.razor
+++ b/src/Minikanban/Components/_Imports.razor
@@ -12,3 +12,4 @@
 @using Minikanban.Components.Layout
 @using Minikanban.Components.Pages
 @using Minikanban.Components.Shared
+@using Minikanban.Components.Admin
