--- a/src/Minikanban/Components/Shared/KanbanColumn.razor
+++ b/src/Minikanban/Components/Shared/KanbanColumn.razor
@@ -1,15 +1,15 @@
-
 <div class="column">
     <h3>@Column.Name</h3>
 
     <AddCardForm ColumnName="@Column.Name" />
 
-    @foreach (var card in Column.Cards)
+    @foreach(var card in Column.Cards)
     {
         <KanbanCard Card="card" ColumnName="@Column.Name" />
     }
 </div>
 
-@code {
-    [Parameter] public Minikanban.Models.KanbanColumn Column { get; set; } = default!;
+@code 
+{
+    [Parameter] public Minikanban.Models.KanbanColumn  Column { get; set; } = default!;
 }
