--- a/src/Minikanban/Components/Layout/MainLayout.razor
+++ b/src/Minikanban/Components/Layout/MainLayout.razor
@@ -1,27 +1,30 @@
-@using Minikanban.Services
+@using Minikanban.Components.Shared
 @inherits LayoutComponentBase
 @inject KanbanState State
+@inject UserState UserState
 
 <CascadingValue Value="State">
-    <div class="page">
-        <div class="sidebar">
-            <NavMenu />
-        </div>
-
-        <main>
-            <div class="top-row px-4">
-                <a href="https://learn.microsoft.com/aspnet/core/" target="_blank">About</a>
+    <CascadingValue Value="UserState">
+        <div class="page">
+            <div class="sidebar">
+                <NavMenu />
             </div>
 
-            <article class="content px-4">
-                @Body
-            </article>
-        </main>
-    </div>
+            <main>
+                <div class="top-row px-4">
+                    <a href="https://learn.microsoft.com/aspnet/core/" target="_blank">About</a>
+                </div>
 
-    <div id="blazor-error-ui">
-        An unhandled error has occurred.
-        <a href="" class="reload">Reload</a>
-        <a class="dismiss">×</a>
-    </div>
+                <article class="content px-4">
+                    @Body
+                </article>
+            </main>
+        </div>
+
+        <div id="blazor-error-ui">
+            An unhandled error has occurred.
+            <a href="" class="reload">Reload</a>
+            <a class="dismiss">×</a>
+        </div>
+    </CascadingValue>
 </CascadingValue>
