--- a/src/Minikanban/Components/_Imports.razor
+++ b/src/Minikanban/Components/_Imports.razor
@@ -1,4 +1,3 @@
-
 @using System.Net.Http
 @using System.Net.Http.Json
 @using Microsoft.AspNetCore.Components.Forms
@@ -7,8 +6,11 @@
 @using static Microsoft.AspNetCore.Components.Web.RenderMode
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
+@using Minikanban
+@using Minikanban.Components
 @using Minikanban.Models
 @using Minikanban.Services
 @using Minikanban.Components.Layout
 @using Minikanban.Components.Pages
 @using Minikanban.Components.Shared
+@using Minikanban.Components.Admin
